admin/themes/default/theme.css
/* ... */
.themeActions DIV {display: table-cell; vertical-align: middle; line-height:18px;}
.themeActions span, .themeActions a {padding: 10px; margin: 0px 10px 10px 10px; font-weight: bold; font-size: 12px;}
.themeActions span {font-size: 11px; background-color: #ddd; opacity: 0.5; color: ;}

.themeActions .pluginUnavailableAction {margin:0 10px 10px 10px;}

.themeActions a:nth-child(1) {background-color: #ffc17e; color: #222;}
.themeActions a:nth-child(1):hover {background-color: #ff7700; color: white; text-decoration: none;}

.themeActions a:nth-child(2) {background-color: #ececec; color: #222;}
.themeActions a:nth-child(2):hover {background-color: #ff9b32; color: #111; text-decoration: none;}

#themesContent H3 {font-size:16px; text-align:left; border-bottom:1px solid #444; letter-spacing:1px; margin:5px;}
.themeBoxes {min-height:0;text-align:left;}

h1 {
  background-color: #f3f3f3;
  margin: 0;
  padding: 20px;
  text-align: left;
  font-weight: normal;
  color: #333;
  font-size: 22px;
}
h2 { letter-spacing:1px; font-weight:bold; display: none;}
h2:lang(en) { text-transform:capitalize; }

#pluginsMenuSeparator {width:80%; margin:5px auto;}

#helpContent P {text-align:left; margin-left:10px;}
#helpContent LI, #ftpPage LI {margin-top:10px;}
#helpContent P.nextStepLink {text-align:center; font-weight:bold; margin-bottom:20px;}

#availablePlugins FIELDSET  {border:none;}

/**
 * Informations box in administration
 */
.infos, .errors, .warnings, .messages {
  text-align: left;
  margin: 20px;
  padding: 5px;
  font-weight:bold;
  min-height: 54px;
}

.infos ul, .errors ul, .warnings ul, .messages ul {
  margin-top:18px;
}

.infos ul {color: #3C3C3C;}

.eiw-icon {
  float: left;
  font-size: 40px;
  margin-right: 10px;
}

.infos {
  color: #0a0;
  background-color:#c2f5c2;
}

.infos a {color: #3C3C3C;}

.errors {
  color: #f22;
  background-color: #ffd5dc;
  border-left: 4px solid #f22;
}

.warnings {
  color: #ee8800;
  background-color:#ffdd99;
  border-left:4px solid #ee8800;
}

.messages {
  color: #00529b;
  background-color:#bde5f8;
  border-left:4px solid #00529b;
}

.badge {
  background-color:#0a0;
  color:white;
  padding:1px 5px;
  border-radius:10px;
  -moz-border-radius:10px;
  -webkit-border-radius:10px;
  margin-left:5px;
}

.infos li, .errors li, .warnings li, .messages li { list-style-type:none; }
.infos .submit {margin-left:30px;}

.checkActions {text-align:left;padding:0;margin:0;}
#checkActions {text-align:left; margin:0 0 20px 0;}
.ActionUserList #checkActions {margin: 20px 0 20px 0;}

.pluginBoxes {
  border: none;
  padding: 20px;
  padding-top: 0;
  min-height: 271px;
  text-align:left;
}

.pluginBoxesContainer {
  position:relative;
  display: flex;
  flex-wrap: wrap;
  justify-content: left;

}

.pluginBoxesTitle {font-size: 16px;}
.pluginBoxesTitle p {margin-right: 10px;}
.pluginBoxesTitle span {border-radius: 50%; margin-right: 5px; padding: 4px}

.pluginBoxesTitle {display: flex;align-items: center}
.pluginFilter {justify-content: end;position: absolute;right: 170px; z-index: 2; transform: translateY(6px);}

.pluginBoxesCount {
  background-color: rgb(150, 150, 150);
  color: white;
  border-radius: 25px;
  text-align: center;
  padding: 2px 10px;
  font-weight: bold;
  font-size: 12px;
}

.pluginBox {
  margin-bottom:10px;
  border-width:1px;
  border-style:solid;
  border-radius:5px;
  -moz-border-radius:5px;
 }
.pluginBox table {width:99%;}
.pluginBox td {text-align:left;}
.pluginBox td.pluginDesc img {vertical-align:middle;}
.pluginBoxNameCell {width:180px; vertical-align:top;}
.pluginBoxes .inactive, .pluginBoxes .uninstalled {}
.emptyResearch {opacity: 0.3;text-align: center;left: 45%;font-weight: bold;font-size: 30px; position: absolute; display: none;}

.pluginMiniBox {
  display:flex;
  width:260px;
  margin:15px 30px;
  border-top-right-radius:5px;
  border-bottom-right-radius:5px;
  margin-left: 0;
  box-shadow: 0px 0px 5px #acacac;
}
.PluginOptionsBlock a:hover { color: white ;}
.pluginContent {
  width: 100%;
  text-align: left;
  background-color: #fafafa;
  padding: 15px;
  position: relative;
  border-left: solid 5px #ffc17e;
  border-right:solid 5px #fafafa;
  border-radius: 5px;
}

.pluginMiniBoxNameCell {
  font-size: 14px;
  font-weight: bold;
}

.pluginMiniBoxNameCellCompact {
  width: min-content;
  max-width: 170px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
}


.pluginDesc {
  margin-top: 5px;
  font-size: 12px;
  color: grey;
  line-height: 1.5em;
  height: 3em;
  position: relative;
  overflow: hidden;
}

.pluginActions a {
  margin-top:15px;
  font-size:12px;
}

.pluginActions > * {
  padding: 10px 4px;
  text-align: center;
  display:block;
}
.pluginEmptyInput {width: 90px;}
.pluginUnavailableAction {
  opacity: 0.5;
  font-size: 12px;
  padding: 10px 4px;
  margin-top: 15px;
  background-color:#ddd;
  font-weight:700;
}
.pluginActionLevel1 {background-color: #ffc17e; font-weight: bold;}
.pluginActionLevel1:hover {background-color: #ff7700; color: white; text-decoration: none;}
.pluginActionLevel2 {padding:5px 0;}
.pluginActionLevel3 {/*padding-left: 10px; opacity: 0.9;*/padding:5px 0}
.plugin-inactive .pluginContent{
  border:none;
  border-left: solid 5px #999999;
  /*border-radius:10px;*/
}

.showOptions {
  font-size: 16px;
}

.plugin-inactive .pluginMiniBox{
  border-radius:5px;
}

.plugin-inactive .pluginContent .pluginActionLevel1{
  background-color: #999999;
}
.plugin-inactive .pluginContent .pluginActionLevel1:hover{
  background-color:#ff9b32;
}

.pluginMiniBox .PluginOptionsIcons,
.themeBox .PluginOptionsIcons{ 
  display:flex;
  position:absolute;
  top:0;
  right:-6px;
  padding: 13px;
}


 .PluginOptionsBlock{
    display:none;
    position:absolute;
    right: 0;
    top: 40px;
    z-index: 2;
    transform: translateX(calc(50% - 19px));
  }

.warning:before {content:url(icon/warning.png);vertical-align:top;}
/* ... */

